--- a/README.Rmd
+++ b/README.Rmd
@@ -36,6 +36,7 @@ url_unicol_github <- "https://github.com/hneth/unicol"
 [![CRAN status](https://www.r-pkg.org/badges/version/unikn)](https://CRAN.R-project.org/package=unikn)
 [![R-CMD-check](https://github.com/hneth/unikn/actions/workflows/check-standard.yaml/badge.svg)](https://github.com/hneth/unikn/actions/workflows/check-standard.yaml)
 [![Downloads/month](https://cranlogs.r-pkg.org/badges/unikn)](https://www.r-pkg.org/pkg/unikn)
+[![Total downloads](https://cranlogs.r-pkg.org/badges/grand-total/unikn)](https://www.r-pkg.org/pkg/unikn) 
 [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.7096191.svg)](https://doi.org/10.5281/zenodo.7096191)
 <!-- Devel badges end. -->
 
@@ -129,7 +130,7 @@ The colors of **unikn** belong to two categories of color palettes:
 
 - 16\ palettes implementing the colors of the [University of Konstanz](https://www.uni-konstanz.de/)'s corporate design 
 
-- 52\ additional color palettes from various academic institutions
+- over 230\ color palettes of more than 100\ additional institutions are now provided by the **[unicol](`r url_unicol_cran`)** package
 
 
 ### The colors of Konstanz University 
@@ -253,31 +254,7 @@ former versions of **unikn** (up to version\ 0.8.0) provided color palettes of m
 
 As the number of color palettes has been growing beyond the scope of this package, the color palettes from other institutions are now being collected in a separate R\ package **[unicol](`r url_unicol_cran`)**. 
 
-Installing **[unicol](`r url_unicol_cran`)** currently provides access to a diverse range of over **200\ color palettes** from over **80\ institutions**. 
-
-<!-- OLDER parts: List of additional color palettes -->
-
-<!-- - [Caltech](https://www.caltech.edu/): `caltech_pal_1`, `caltech_pal_2`, `caltech_pal_3`  -->
-<!-- - [ETH Zurich](https://ethz.ch/de.html): `eth_pal_1`, `eth_pal_2`, `eth_pal_3`  -->
-<!-- - [Free University Berlin](https://www.fu-berlin.de/en/index.html): `fu_pal_0`, `fu_pal_1`, `fu_pal_2`, `fu_pal_3`  -->
-<!-- - [Humboldt University Berlin](https://www.hu-berlin.de/en): `hu_pal_1`, `hu_pal_2`  -->
-<!-- - [LMU Munich](https://www.lmu.de/en/index.html): `lmu_pal_1`, `lmu_pal_2`, `lmu_pal_3`  -->
-<!-- - [Max Planck Society](https://www.mpg.de/en): `mpg_pal`  -->
-<!-- - [University of Bonn](https://www.uni-bonn.de/en): `uni_bonn_1`, `uni_bonn_2`  -->
-<!-- - [University of Freiburg](https://uni-freiburg.de/): `uni_freiburg_0`, `uni_freiburg_1`, `uni_freiburg_2`,    -->
-<!--   (from\ 2022: `uni_freiburg_br`, `uni_freiburg_blue`, `uni_freiburg_grey`, `uni_freiburg_info`)  -->
-<!-- - [University of Göttingen](https://uni-goettingen.de/): `uni_goettingen_1`, `uni_goettingen_2`, `uni_goettingen_3`  -->
-<!-- - [University of Hamburg](https://www.uni-hamburg.de/): `uni_hamburg_1`, `uni_hamburg_2`  -->
-<!-- - [University of Jena](https://www.uni-jena.de/): `uni_jena_1`, `uni_jena_2`  -->
-<!-- - [Kiel University](https://www.uni-kiel.de/en/): `uni_kiel_1`, `uni_kiel_2`  -->
-<!-- - [University of Köln](https://www.uni-koeln.de/): `uni_koeln_1`, `uni_koeln_2`  -->
-<!-- - [University of Konstanz](https://www.uni-konstanz.de/): `uni_konstanz_1`, `uni_konstanz_2`  -->
-<!-- - [University of Mannheim](https://www.uni-mannheim.de/): `uni_mannheim_1`, `uni_mannheim_2`  -->
-<!-- - [Princeton University](https://www.princeton.edu/): `uni_princeton_0`, `uni_princeton_1`, `uni_princeton_2`  -->
-<!-- - [University of Regensburg](https://www.uni-regensburg.de/): `uni_regensburg_1`, `uni_regensburg_2`, `uni_regensburg_3`  -->
-<!-- - [University of Ulm](https://www.uni-ulm.de/): `uni_ulm_1`, `uni_ulm_2`  -->
-<!-- - [Rensselaer Polytechnic Institute](https://www.rpi.edu/): `rpi_pal_1`, `rpi_pal_2`, `rpi_pal_3` -->
-<!-- - [RPTU Kaiserslautern-Landau](https://rptu.de/): `rptu_pal`  -->
+Installing **[unicol](`r url_unicol_cran`)** currently provides access to a diverse range of over **230\ color palettes** from more than **100\ institutions**. 
 
 <!-- Note: Duplicate image in vignette color_inst.Rmd -->
 
