bug fix: print my_url

--- a/vignettes/text_boxes_and_decorations.Rmd
+++ b/vignettes/text_boxes_and_decorations.Rmd
@@ -680,7 +680,7 @@ One of the more obscure rules (on p. 31 of the CD manual) concerns the rendering
 
 ```{r url-post, fig.align = 'center', fig.width = 2, fig.height = 2, out.width = "25%"}
 my_url <- url_unikn("https://www.uni-konstanz.de/")  # input URL
-# my_url  # formatted URL
+my_url # formatted URL
 
 # Put URL at bottom of an xbox:
 post(labels = my_url, x = .05, y = .1, font = 4, 
