--- a/vignettes/text_boxes_and_decorations.Rmd
+++ b/vignettes/text_boxes_and_decorations.Rmd
@@ -3,7 +3,10 @@ title: "Text boxes and decorations"
 author: "SPDS, uni.kn"
 date: "2023 01 01"
 output: 
-  rmarkdown::html_vignette: 
+  rmarkdown::html_vignette:
+    md_extensions: [ 
+      "-autolink_bare_uris" 
+    ]
     fig_caption: yes
 vignette: > 
   %\VignetteIndexEntry{Text boxes and decorations}
