--- a/vignettes/color_recipes.Rmd
+++ b/vignettes/color_recipes.Rmd
@@ -5,6 +5,9 @@ date: "2022 11 30"
 output: 
   rmarkdown::html_vignette: 
     fig_caption: yes
+    md_extensions: [ 
+      "-autolink_bare_uris" 
+    ]
 vignette: > 
   %\VignetteIndexEntry{Color recipes}
   %\VignetteEncoding{UTF-8}
