--- a/vignettes/institutional_colors.Rmd
+++ b/vignettes/institutional_colors.Rmd
@@ -4,7 +4,11 @@ author: "SPDS, uni.kn"
 date: "2023 08 16"
 output: 
   rmarkdown::html_vignette: 
+    md_extensions: [ 
+      "-autolink_bare_uris" 
+    ]
     fig_caption: yes
+    
 vignette: > 
   %\VignetteIndexEntry{Institutional colors}
   %\VignetteEncoding{UTF-8}
