--- a/vignettes/text_decorations.Rmd
+++ b/vignettes/text_decorations.Rmd
@@ -49,8 +49,8 @@ url_unicol_github <- "https://github.com/hneth/unicol"
 </a>
 
 This vignette explains the **unikn** functions for plotting graphical elements and text decorations. 
-(See the vignette on [colors](colors.html) for general information on colors, color palettes, and corresponding functions, 
-or the more specialized vignettes on [color recipes](color_recipes.html) and [institutional colors](color_inst.html).) 
+(See the vignette on [colors](color_functions.html) for general information on colors, color palettes, and corresponding functions, 
+or the more specialized vignettes on [color recipes](color_recipes.html) and [institutional colors](inst_colors.html).) 
 
 Please install and/or load the **unikn** package to get started: 
 
@@ -61,7 +61,7 @@ library('unikn')             # loads the package
 
 ## Overview 
 
-Beyond providing support for [colors](colors.html), **unikn** provides functions for plotting graphical elements (like boxes) and text decorations (with colored backgrounds or underlining). 
+Beyond providing support for [colors](color_functions.html), **unikn** provides functions for plotting graphical elements (like boxes) and text decorations (with colored backgrounds or underlining). 
 Before illustrating these functions, please note some caveats: 
 
 - Plotting text (i.e., graphically rendering characters) is rarely a good idea. In contrast to the vector fonts used by DTP programs, plotted text typically does not scale (when changing the size of images) and cannot be recognized automatically (e.g., copied, indexed, or scraped). 
@@ -695,7 +695,7 @@ The following versions of **unikn** and corresponding resources are currently av
 
 Type:                    | Version:           | URL:                           |         
 :------------------------|:-------------------|:-------------------------------| 
-A. **unikn** (R package): | [Release version](https://CRAN.R-project.org/package=unikn) | <https://CRAN.R-project.org/package=unikn> |
+A. **unikn** (R package): | [Release version](https://CRAN.R-project.org/package=unikn)  | <https://CRAN.R-project.org/package=unikn> |
     &nbsp;                | [Development version](https://github.com/hneth/unikn/)       | <https://github.com/hneth/unikn/> | 
 B. Online documentation:  | [Release version](https://hneth.github.io/unikn/)            | <https://hneth.github.io/unikn/> | 
     &nbsp;                | [Development version](https://hneth.github.io/unikn/dev/)    | <https://hneth.github.io/unikn/dev/> | 
