--- a/README.Rmd
+++ b/README.Rmd
@@ -58,11 +58,11 @@ url_unicol_github <- "https://github.com/hneth/unicol"
 
 # unikn `r packageVersion('unikn')` <img src = "./inst/pix/unikn.png" align = "right" alt = "unikn::" width = "165px" />
 
-<!-- unikn pkg logo and link: --> 
-<!-- <a href = "https://CRAN.R-project.org/package=unikn">
-<img src = "./inst/pix/unikn.png" alt = "unikn::" align = "right" width = "165px" style = "width: 165px; float: right; border:10;"/>
-</a> 
--->
+<!-- unikn pkg logo and link (to CRAN): --> 
+<!-- <a href = "https://CRAN.R-project.org/package=unikn"> -->
+<!-- <img src = "./inst/pix/unikn.png" alt = "unikn::" align = "right" width = "165px" style = "width: 165px; float: right; border:20;"/> -->
+<!-- </a>  -->
+
 
 <!-- Slogan: -->
 
