--- a/README.Rmd
+++ b/README.Rmd
@@ -35,7 +35,7 @@ url_unicol_github <- "https://github.com/hneth/unicol"
 <!-- Devel badges start: -->
 [![CRAN status](https://www.r-pkg.org/badges/version/unikn)](https://CRAN.R-project.org/package=unikn)
 [![R-CMD-check](https://github.com/hneth/unikn/actions/workflows/check-standard.yaml/badge.svg)](https://github.com/hneth/unikn/actions/workflows/check-standard.yaml)
-[![Downloads/month](https://cranlogs.r-pkg.org/badges/unikn)](https://www.r-pkg.org/pkg/unikn)
+[![Downloads/month](https://cranlogs.r-pkg.org/badges/unikn?color="00a9e0")](https://www.r-pkg.org/pkg/unikn)
 [![Total downloads](https://cranlogs.r-pkg.org/badges/grand-total/unikn)](https://www.r-pkg.org/pkg/unikn)
 [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.7096191.svg)](https://doi.org/10.5281/zenodo.7096191)
 <!-- Devel badges end. -->
@@ -52,8 +52,8 @@ url_unicol_github <- "https://github.com/hneth/unicol"
 [![CRAN status](http://www.r-pkg.org/badges/version/unikn)](https://CRAN.R-project.org/package=unikn) 
 [![R-CMD-check](https://github.com/hneth/unikn/actions/workflows/check-standard.yaml/badge.svg)](https://github.com/hneth/unikn/actions/workflows/check-standard.yaml) 
 [![Build status](https://travis-ci.org/hneth/unikn.svg?branch=master)](https://travis-ci.org/hneth/unikn/)
-[![Downloads/month](https://cranlogs.r-pkg.org/badges/unikn?color=brightgreen)](https://www.r-pkg.org/pkg/unikn)
-[![Total downloads](https://cranlogs.r-pkg.org/badges/grand-total/unikn?color='e0607e')](https://www.r-pkg.org/pkg/unikn)
+[![Downloads/month](https://cranlogs.r-pkg.org/badges/unikn?color="00a9e0")](https://www.r-pkg.org/pkg/unikn)
+[![Total downloads](https://cranlogs.r-pkg.org/badges/grand-total/unikn?color="e0607e")](https://www.r-pkg.org/pkg/unikn)
 [![Rdoc](https://www.rdocumentation.org/badges/version/unikn/)](https://www.rdocumentation.org/packages/unikn/)
 -->
 
@@ -132,7 +132,7 @@ The colors of **unikn** belong to two categories of color palettes:
 
 - 16\ palettes implementing the colors of the [University of Konstanz](https://www.uni-konstanz.de/)'s corporate design 
 
-- over 230\ color palettes of more than 100\ additional institutions are now provided by the **[unicol](`r url_unicol_cran`)** package
+- over 270\ color palettes of more than 110\ additional institutions are now provided by the **[unicol](`r url_unicol_cran`)** package
 
 
 ### The colors of Konstanz University 
@@ -256,7 +256,8 @@ former versions of **unikn** (up to version\ 0.8.0) provided color palettes of m
 
 As the number of color palettes has been growing beyond the scope of this package, the color palettes from other institutions are now being collected in a separate R\ package **[unicol](`r url_unicol_cran`)**. 
 
-Installing **[unicol](`r url_unicol_cran`)** currently provides access to a diverse range of over **230\ color palettes** from more than **100\ institutions**. 
+Installing **[unicol](`r url_unicol_cran`)** currently provides access to a diverse range of over **270\ color palettes** from more than **110\ institutions**. 
+
 
 <!-- Note: Duplicate image in vignette color_inst.Rmd -->
 
