--- a/README.Rmd
+++ b/README.Rmd
@@ -58,7 +58,12 @@ url_unicol_github <- "https://github.com/hneth/unicol"
 -->
 
 
-# unikn `r packageVersion('unikn')`
+# unikn `r packageVersion('unikn')` <img src = "./logo.png" align = "right" alt = "unikn" width = "160" />
+
+<!-- unikn pkg logo and link (to CRAN): --> 
+<!-- <a href = "https://CRAN.R-project.org/package=unikn"> -->
+<!-- <img src = "./inst/pix/unikn.png" alt = "unikn::" align = "right" width = "150px" style = "width: 150px; float: right; border:20;"/> -->
+<!-- </a> -->
 
 <!-- Slogan: -->
 
@@ -68,6 +73,7 @@ url_unicol_github <- "https://github.com/hneth/unicol"
 
 The **unikn** package provides useful color functionality ---\ by defining dedicated colors and color palettes, and functions for finding, changing, viewing, and using them\ --- and styled text elements (e.g., for marking, underlining, or plotting colored titles) in\ [R](https://www.r-project.org/). 
 The package's pre-defined range of colors and text decoration functions is based on the corporate design of the [University of Konstanz](https://www.uni-konstanz.de/) (see [link](https://www.uni-konstanz.de/en/university/news-and-media/create-online-and-print-media/corporate-design/) for details), but can easily be adapted and extended to other purposes or institutions. 
+
 
 ### Overview
 
@@ -88,12 +94,7 @@ While this renders the use of default specifications simple and straightforward,
 
 The **unikn** package currently provides five types of objects and functions: 
 
-<!-- unikn pkg logo and link (to CRAN): --> 
-<a href = "https://CRAN.R-project.org/package=unikn">
-<img src = "./inst/pix/unikn.png" alt = "unikn::" align = "right" width = "150px" style = "width: 150px; float: right; border:20;"/>
-</a>
-
-<!-- List of features/functionality: -->
+<!-- Enumerate features/functionality: -->
 
 1. Pre-defined **colors** and **color palettes** (e.g., `Seeblau` and `pal_unikn`);  
 
